--- a/style.scss
+++ b/style.scss
@@ -1,185 +1,122 @@
-@import "./colors.scss";
-@import "./fonts.scss";
+@import './colors.scss';
+@import './fonts.scss';
 
-/* Basic options */
 *{
     padding: 0;
-    box-sizing: border-box;
     margin: 0;
-    overflow: hidden;
+    box-sizing: border-box;
 }
-body{
+
+
+#bg-container{
+    height: 100%;
+}
+
+#main{
+    position: absolute;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
-    overflow: hidden;
-}
-
-/* Top navigation panel */
-#top-navbar-container{
-    height: 50px;
+    background-color: rgba(0,0,0,0);
     display: flex;
-
-}
-
-.navbar{
-    height: 50px;
-}
-
-#left-side-navbar{
-    min-width: 50px;
-    height: 50px;
-    width: 10%;
-    display: flex;
-    align-items: center;
     justify-content: center;
+    align-items: center;
 }
 
-#mid-navbar{
-    width: 80%;
+#main-bg{
+    position: fixed;
+    z-index: -1;
+}
+
+#form-container{
+    background-color: $smokyWhite;
+    height: 60vh;
+    min-height: 300px;
+    max-height: 450px;
+    width: 20vw;
+    min-width: 200px;
+    max-width: 300px;
+    border-radius: 10px;
+    opacity: 0%;
+    animation: beVisible 5s 2s forwards;
+}
+
+#brand-container{
+    height: 10vh;
+    min-height: 80px;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
-
-#mid-panel{
-    display: flex;
-    justify-content: space-around;
     align-items: center;
 }
 
-#default-navbar{
-    width: 100%;
-    display: flex;
-    justify-content: space-around;
-    padding-left: 20%;
-    padding-right: 20%;
-    align-items: center;
+#email, #password{
+    border: 0;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    background-color: transparent;
+    margin: auto;
+    display: block;
+    width: 90%;
 }
 
-a{
+#login{
+    border: 0;
+    background: linear-gradient($theme-gradient1, $theme-gradient2);
+    margin: auto;
+    display: block;
+    width: 60%;
+    min-width: 100px;
+    height: 30px;
+    border-radius: 15px;
+    color: white;
     font-family: $Roboto;
+    font-weight: 300;
     cursor: pointer;
 }
-
-#right-side-navbar{
-    width: 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-width: 40px;
-    min-height: 40px;
+.fly, .bird {
+    margin: auto;
+    display: block;
+    text-align: center;
+    font-family: $Roboto;
+    font-weight: 100;
 }
 
-#menu{
-    width: 40px;
-    height: 40px;
-    min-width: 40px;
-    min-height: 40px;
-    visibility: hidden;
-    cursor: pointer;
+.fly{
+    font-family: $OleoScript;
+    font-size: 60px;
+    color: $theme-gradient2;
+}
+
+.bird{
+    font-family: $Inspiration;
+    font-size: 60px;
+    color: $theme-gradient1;
 }
 
 #logo{
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
 }
 
-/* Loading line */
-#line{
-    height: 3px;
-    background: linear-gradient(90deg, $theme-gradient1, $theme-gradient2);
-    animation: loading 5s infinite linear;
-}
-
-/* Midle panel */
-#main-img{
-    width: 790px;
-    height: 570px;
-}
-
-h1{
-    font-family: $Roboto;
-    font-weight: 600;
-    padding: 10px 0px 10px 0px;
-}
-
-p{
-    font-family: $Roboto;
-    font-weight: 100;
-    padding: 10px 0px 10px 0px;
-}
-
-#btn-buy-now{
-    padding: 10px 20px 10px 20px;
-    background: linear-gradient(90deg, $theme-gradient1, $theme-gradient2);
-    border-radius: 5px;
-    border: none;
-    color: white;
-    cursor: pointer;
-}
-
-#buy-now-container{
-    padding: 10px 0px 10px 0px;
-}
-
-/* Dropdown menu */
-#dropdown-menu{
-    position: absolute;
-    right: 0;
-    width: 200px;
-    padding: 10px 0px 10px 10px;
-    background: linear-gradient( $theme-gradient1, $theme-gradient2);
-    display: none;
-}
-li{
-    padding: 10px;
-}
-
-.link-dropdown{
-    color: white;
-}
-
-/* Animations */
-
-/* Media queries */
-
-@media screen and (max-width: 1600px) {
-    #mid-text-panel{
-        padding: 0px 10vw 0px 10vw;
-    }
-    #main-img{
-        max-width: 790px;
-        max-height: 570px;
-        min-width: 277px;
-        min-height: 200px;
+@media (min-aspect-ratio: 16/9){
+    #main-bg{
         width: 100%;
+        height: auto;
+    }
+}
+
+@media (max-aspect-ratio: 16/9){
+    #main-bg{
+        width: auto;
         height: 100%;
     }
 }
 
-@media screen and (max-width: 1100px) {
-    #menu{
-        visibility: visible;
+@keyframes beVisible{
+    0%{
+        opacity: 0%;
     }
-    #default-navbar{
-        visibility: hidden;
-    }
-    #mid-panel{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-    #background-container{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 80vw;
-    }
-    #mid-text-panel{
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        width: 80vw;
-
+    100%{
+        opacity: 100%;
     }
 }
